# Bachelor-Thesis

./: .gitignore  pyproject.toml  requirements.txt
config/: gan.yaml  unet.yaml
src/plate_inpainting/data/: dataset.py  masks.py
src/plate_inpainting/evaluation/: evaluate_model.py  generate_masks.py  generate_unet_predictions.py  image_metrics.py  ocr_metrics.py
src/plate_inpainting/models/: networks.py  unet.py
src/plate_inpainting/training/: train_gan.py  train_unet.py  trainer_gan.py
src/plate_inpainting/utils/: tools.py
