[project]
name = "bachelor-thesis-copy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fast-plate-ocr[onnx]>=1.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "segmentation-models-pytorch>=0.5.0",
    "torch==2.6.0+cu124",
    "torchmetrics>=1.9.0",
    "torchvision==0.21.0+cu124",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
